# autodep

./: .pre-commit-config.yaml  README.md  autoformalize.py  generate_deps.py  main.py  pyproject.toml  utils.py
data/proofnet/: generated_implications.jsonl  proofnet-lean4.jsonl
tests/: test_lean_sanity.py
