[project]
name = "autodep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "datasets>=4.0.0",
    "faiss-cpu>=1.11.0.post1",
    "lean-interact>=0.1.0",
    "matplotlib>=3.10.3",
    "ndjson>=0.3.1",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "pyyaml>=6.0.2",
    "ratelimit>=2.2.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]
